--- a/src/ui/forms/step-form/styles/step-form-header.css
+++ b/src/ui/forms/step-form/styles/step-form-header.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   gap: 2rem;
   align-items: center;
-  padding-top: 2.5vh;
+  padding-top: 2rem;
 }
 
 .step-form__progress {
